# 3D_GAME_ENGINE

./: .gitignore  CMakeLists.txt  PATCH_NOTES.txt  README.md
open_world_v14-offline/: CMakeLists.txt  README.md  STARTER_PACK_V1_NOTES.txt  savegame.profile  worldstate.snapshot
open_world_v14-offline/assets/: engine.cfg
open_world_v14-offline/assets/ambience/: starter_village.ambience
open_world_v14-offline/assets/builds/: starter_release.build  starter_release.manifest.txt  starter_release.releasegate  v106_completion_build_report.txt  v90_completion.releaseprofile  v95_build_success_report.txt  v96_build_success_report.txt
open_world_v14-offline/assets/debug/: starter_slice.debugreview
open_world_v14-offline/assets/dialogue/: guide_mira_intro.dialogue  guide_mira_intro.dialoguegraph  guide_mira_intro.templatebundle  hon_solo.dialogue  hon_solo.dialoguegraph
open_world_v14-offline/assets/encountergraphs/: starter_wolves.encountergraph
open_world_v14-offline/assets/enemies/: starter_wolves.templateencounter  wolf_raider.enemy
open_world_v14-offline/assets/exports/: starter_release.exportpreset
open_world_v14-offline/assets/factions/: starter_factions.json
open_world_v14-offline/assets/foundation/: v90.foundation
open_world_v14-offline/assets/hud/: starter_hud.hud
open_world_v14-offline/assets/interiors/: shop_basic.roompreset  starter_shop.interior
open_world_v14-offline/assets/itemgraphs/: healing_potion.itemgraph
open_world_v14-offline/assets/items/: herb.item  iron_sword.item  starter_market.templateeconomy
open_world_v14-offline/assets/links/: first_steps_quest.links  guide_mira_intro_conversation.links  hon_solo_conversation.links  second_quest_quest.links  starter_market_economy.links  starter_shop_interior.links  starter_wolves_encounter.links  village_rpg_template.links
open_world_v14-offline/assets/loot/: common_animals.loot  starter_field_loot.loot
open_world_v14-offline/assets/menus/: main_menu.menu  pause_menu.menu
open_world_v14-offline/assets/music/: starter_village.musiczone
open_world_v14-offline/assets/npcs/: guide_mira.npc  herbalist_mira.npc  shopkeeper_mira.npc  starter_merchant.merchant
open_world_v14-offline/assets/prefabs/: chest_loot.prefab  enemy_runner.prefab  herbalist_shopkeeper.prefab  item_pickup_herb.prefab  starter_merchant.prefab  starter_prop.prefab
open_world_v14-offline/assets/profiles/: starter.profile
open_world_v14-offline/assets/projects/: v90_creator_baseline.project  village_rpg_project.project
open_world_v14-offline/assets/questgraphs/: first_steps.questgraph  second_quest.questgraph
open_world_v14-offline/assets/quests/: clear_the_path.quest  first_steps.quest  first_steps.templatequest  second_quest.quest
open_world_v14-offline/assets/regions/: starter_forest.json  starter_village.atmosphere  starter_village.json
open_world_v14-offline/assets/registry/: assets.registry  content_registry.txt  v83_persistence_report.txt  v84_ui_report.txt  v85_audio_report.txt  v86_export_readiness.txt  v86_validation_report.txt  v87_export_wizard_report.txt  v88_template_report.txt  v89_ship_report.txt  v90_milestone_report.txt  v91_runtime_registry_report.txt  v92_1_comment_pass_report.txt  v93_runtime_registry_report.txt  v94_runtime_registry_report.txt  v95_runtime_registry_report.txt  v96_runtime_registry_report.txt
open_world_v14-offline/assets/reports/: starter_release_ship_checklist.txt  starter_slice.playtest  v101_compile_link_checklist.txt  v102_builder_open_checklist.txt  v103_builder_toggle_checklist.txt  v104_builder_access_checklist.txt  v105_builder_autostart_checklist.txt  v106_completion_checklist.txt  v107_builder_close_checklist.txt  v109_toggle_checklist.txt  (+12 more)
open_world_v14-offline/docs/: LOGGING_PATCH_README.md  PERMANENT_REGION_PIPELINE_FIX_README.md  V100_BUILD_FIXES.md  V101_CLEAN_COMPILE_AND_LINK_BASELINE.md  V102_BUILDER_OPENING_FIX.md  V103_REAL_BUILDER_TOGGLE_FIX.md  V104_REAL_BUILDER_ACCESS_FIX.md  V105_BUILDER_AUTO_OPEN_FIX.md  V106_COMPLETION_BASELINE.md  V107_BUILDER_CLOSE_FIX.md  V109_TOGGLE_AND_DIAGNOSTICS_STABILIZATION.md  V110_COMPILE_AND_TOGGLE_REPAIR.md  V111_CONTENTREGISTRY_COMPILE_REPAIR.md  V113_OFFLINE_BUILD_AND_BUILDER_SESSION.md  V114_EXPORT_PIPELINE_AND_TOGGLE_HARDENING.md  V115_BUILDER_REPAIR_AND_EXPORT_FIX.md  V116_BUILDER_SHORTCUT_ROOT_CAUSE_FIX.md  V36_MERCHANT_SYSTEM_PLAN.md  V44_CONTENT_READY_TRANSITION_PLAN.md  V47_QUEST_CHAIN_PROGRESSION_PLAN.md  V50_MULTI_REGION_VERTICAL_SLICE_COMPLETION_PLAN.md  V51_CLEANUP_HARDENING_PLAN.md  V52_STARTER_BASE_COMPLETION_PLAN.md  V53_CONTENT_PRODUCTION_KICKOFF_PLAN.md  V54_PLAYABLE_VALE_REFINEMENT_PLAN.md  V55_CONTENT_AUTHORING_STRESS_TEST_PLAN.md  V56_CONTENT_READY_COMPLETION_PLAN.md  V57_LARGE_WORLD_HIGH_DETAIL_PLAN.md  V90_REAL_ENGINE_FIXES.md  V91_RUNTIME_INTEGRATION_HARDENING_PLAN.md  V92_1_COMMENT_PASS_SUMMARY.md  V92_1_LOCAL_COMPILE_AND_RUNTIME_CHECKLIST.md  V92_2_LOCAL_BUILD_FOCUS.md  V92_LOCAL_COMPILE_RUNTIME_VERIFICATION.md  V94_WINDOWS_COMPILE_RUNTIME_REPAIR.md  V95_FIRST_CLEAN_WINDOWS_BUILD.md  V96_FIRST_REAL_RUNTIME_BOOT.md  V97_REAL_REPO_INTEGRATION_BASELINE.md  V99_REAL_REPO_INTEGRATION_REPAIR.md
open_world_v14-offline/version_notes/: V100_NOTES.md  V101_NOTES.md  V102_NOTES.md  V103_NOTES.md  V104_NOTES.md  V105_NOTES.md  V106_COMPLETE_NOTES.md  V107_NOTES.md  V108_NOTES.md  V109_NOTES.md  V110_NOTES.md  V111_NOTES.md  V114_NOTES.md  V116_NOTES.md  V117_NOTES.md  V118_NOTES.md  V119_NOTES.md  V120_NOTES.md  V121_NOTES.md  V122_NOTES.md  V123_FULLY_COMMENTED_NOTES.md  V124_NOTES.md  V125_NOTES.md  V126_NOTES.md  V127_NOTES.md  V128_NOTES.md  V129_NOTES.md  V31_NOTES.md  V43_NOTES.md  V45_NOTES.md  V49_NOTES.md  V50_NOTES.md  V51_NOTES.md  V52_NOTES.md  V54_NOTES.md  V55_NOTES.md  V56_NOTES.md  V57_NOTES.md  V59_NOTES.md  V60_NOTES.md  (+40 more)
open_world_v7/: CMakeLists.txt  README.md  V30_UPGRADE_NOTES.md  savegame.profile  worldstate.snapshot
open_world_v7/assets/: engine.cfg
open_world_v7/src/: main.cpp
open_world_v7/version_notes/: V37_NOTES.md
v3/: CMakeLists.txt  README.md
(+856 files in other folders)
